# KnowledgeGraph

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  check_graphs.py  example.env  pyproject.toml  verify_extraction.py
.github/workflows/: docker.yml
StrategyFlow AY26-2/KnowledgeGraph/: Dockerfile  README.md  pyproject.toml
StrategyFlow AY26-2/KnowledgeGraph/src/london_project/: app.py  dspy_extractor.py  falkordb_client.py  input_processor.py  load_to_falkordb.py  publish.py  redis_client.py  run_pipeline.py
src/london_project/: app.py  dspy_extractor.py  input_processor.py  load_to_falkordb.py  publish.py  run_pipeline.py
src/main_pipeline/: api.py  app.py  dspy_extractor.py  falkordb_client.py  input_processor.py  publish.py  run_pipeline.py
src/main_pipline/: app.py  load_to_falkordb.py  publish.py  run_pipeline.py
