[project]
name = "main_pipeline"
version = "0.1.0"
description = "Knowledge graph extraction pipeline with DSPy, Redis pub/sub, and optional FalkorDB loading"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dspy>=3.1.2",
    "python-dotenv>=1",
    "redis>=7.1.0",
    "falkordb>=1.4.0",
    "docling>=1.0.0",
    "pillow>=10.0.0",
]

[project.scripts]
main = "main_pipeline.app:main"
service = "main_pipeline.app:main"
pipeline = "main_pipeline.run_pipeline:run"
publisher = "main_pipeline.publish:run"
load-graph = "main_pipeline.load_to_falkordb:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
